Add handler that remove todo by todoid
